fix(helpers): add truncate header helper option
closes #9

--- a/packages/apos-ds/modules/@corllete/apos-ds-page-type/assets/css/preview.css
+++ b/packages/apos-ds/modules/@corllete/apos-ds-page-type/assets/css/preview.css
@@ -495,6 +495,9 @@ body, html {
 
 .ds-heading__preview {
 	max-width: 100%;
+}
+
+.ds-heading__preview--truncated {
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	overflow: hidden;
